Add CreateTime to Todo table

--- a/TodoMVC/TodoMVC.csproj
+++ b/TodoMVC/TodoMVC.csproj
@@ -204,6 +204,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707151730142_InitialCreate.cs" />
+    <Compile Include="Migrations\201707151730142_InitialCreate.Designer.cs">
+      <DependentUpon>201707151730142_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201707160634307_version1.cs" />
+    <Compile Include="Migrations\201707160634307_version1.Designer.cs">
+      <DependentUpon>201707160634307_version1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -288,6 +297,14 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201707151730142_InitialCreate.resx">
+      <DependentUpon>201707151730142_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707160634307_version1.resx">
+      <DependentUpon>201707160634307_version1.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
